--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>user-service</module>
         <module>order-service</module>
         <module>FeignAPI</module>
+        <module>gateway</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -54,7 +55,7 @@
                 <version>${mybatis.version}</version>
             </dependency>
 
-            <!--nacos管理依赖-->
+            <!--阿里巴巴管理依赖           -->
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
