--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -4,14 +4,13 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/cloud_user?useSSL=false
     username: root
-    password: 123
+    password: xzs787483go
     driver-class-name: com.mysql.jdbc.Driver
   application:
     name: userservice
   cloud:
     nacos:
       server-addr: localhost:8849
-        namespace: 18d30564-145b-4907-b326-b64264209f9f
 mybatis:
   type-aliases-package: cn.itcast.user.pojo
   configuration:
